# AVPStudio-Mac

./: .gitignore  CMakeLists.txt  README.md
res/icons/icns/: AVPStudio_icon256.icns  imageorganizer_icon256.icns  mxlplayer_icon256.icns  wavgenerator_icon256.icns
src/forms/mainwindow/: pagewelcome.cpp
tools/imageorganizer/: CMakeLists.txt
tools/mxlplayer/: CMakeLists.txt
tools/mxlplayer/src/: doexport.cpp  playcontrol.cpp  playcontrol.h  playvideo.cpp
tools/wavgenerator/: CMakeLists.txt
